gcc/testsuite/rust/compile/issue-4162.rs
pub fn main() {
    while let  = 5
    // { dg-error "should be at least 1 pattern" "" { target *-*-* } .-1 }
    {}
}

